crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_comparison_chain.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.age >= 18 AND n.age <= 65 RETURN n\")"
---
MATCH (n)
WHERE n.age >= 18 AND n.age <= 65
RETURN n
