crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_function_call_multi_arg.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN substring(n.name, 0, 5)\")"
---
MATCH (n)
RETURN substring(n.name, 0, 5)
