crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_function_call_single_arg.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN toLower(n.name)\")"
---
MATCH (n)
RETURN toLower(n.name)
