crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_in_list.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.status IN ['active', 'pending', 'approved'] RETURN n\")"
---
MATCH (n)
WHERE n.status IN ['active', 'pending', 'approved']
RETURN n
