crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_is_not_null.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.email IS NOT NULL RETURN n\")"
---
MATCH (n)
WHERE n.email IS NOT NULL
RETURN n
