crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_is_null.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE n.email IS NULL RETURN n\")"
---
MATCH (n)
WHERE n.email IS NULL
RETURN n
