crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_list_literal.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"RETURN [1, 2, 3, 4, 5] AS nums\")"
---
RETURN [1, 2, 3, 4, 5] AS nums
