crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_map_literal.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"RETURN {name: 'Alice', age: 30} AS person\")"
---
RETURN {name: 'Alice', age: 30} AS person
