crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_nested_and_or.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE (n.a > 1 AND n.b < 10) OR (n.c = 'x' AND n.d IS NOT NULL) RETURN n\")"
---
MATCH (n)
WHERE (n.a > 1 AND n.b < 10) OR (n.c = 'x' AND n.d IS NOT NULL)
RETURN n
