crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_nested_function_calls.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) RETURN toLower(trim(n.name))\")"
---
MATCH (n)
RETURN toLower(trim(n.name))
