crates/cyrs-fmt/src/snapshots/cyrs_fmt__corpus__snap_expr_not.snap
---
source: crates/cyrs-fmt/src/lib.rs
expression: "fmt(\"MATCH (n) WHERE NOT n.active = false RETURN n\")"
---
MATCH (n)
WHERE NOT n.active = FALSE
RETURN n
